Fix alignment in rows in the bottom info panel

--- a/src/ggrc/assets/stylesheets/_tree.scss
+++ b/src/ggrc/assets/stylesheets/_tree.scss
@@ -1252,7 +1252,7 @@ ul.new-tree {
   overflow: hidden;
   zoom: 1;
   .pin-content & {
-    margin-right: 80px;
+    margin-right: 105px;
   }
   &.pin {
     margin-right: 0;
